# kgworkflow

./: .gitignore  .pre-commit-config.yaml  README.md  env-RENAME-ME  justfile  logging.yaml  main.py  pyproject.toml  requirements.txt  robot-test.sh  taskfile.yml  zebra-model.ttl
input/sparql/: zebra.sparql
input/ttl/: zebra-test.ttl  zebra.ttl
notebooks/: example.ipynb
src/: main.py  sparql_select.py
src/kgworkflow/: sparql_select.py  zebra.py
src/kgworkflow/helpers/: general_helper.py  rdf_helper.py  reasoner_helper.py  sparql_helper.py  ttl_helper.py
src/kgworkflow/tools/: sparql_select.py  zebra.py
src/kgworkflow/util/: helper.py  setup_logging.py
src/resources/ttl/: zebra.ttl
src/util/: kg.py  setup_logging.py
test/: test_util.py  util.py
test/resources/sparql/: ask-red-toy.sparql  ask.sparql
test/resources/ttl/: empty.ttl  inferred-toy.ttl  toy.ttl
test/ttl/: toy.ttl  util-test.ttl
test/util/: test_kg.py
